--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-<head>
-<title> Über mich! </title>
-</head>
-<body>
-<h1> Steckbrief </h1>
-</body>
+    <head>
+
+        <title>About me</title>
+    </head>
+    <body>
+
+    <h1>That´s me!</h1>
+
+
+    <h2>Me:</h2>
+    <ol>
+        <li>I am 16 years old.</li>
+        <li>I live in Alberschwende.</li>
+        <li>I go to school in Egg.</li>
+        <li>I have two sisters and one brother.</li>
+    </ol>
+
+
+
+    <h2>Hobbies:</h2>
+    <ol>
+        <li>I am in the soccer club FC Alberschwende.</li>
+        <li>In winter I like to go skiing.</li>
+        <li>In summer I often go cicling.</li>
+    </ol>
+
+
+    <h2>My life:<h2>
+    <p> 16 years ago I was born in the hospital in Dornbirn. With 6 years i visited the primary school in Alberschwende.<br>
+        At this time I also started to play soccer at the soccer club FC Alberschwende. After four years in primary<br>
+        I went to school I went to secondary school also in Alberschwende. And at the moment I am visiting the Borg in Egg.
+      </p>
+
+    </body>
 </html>
