--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h2>Hobbies:</h2>
     <ol>
-        <li>I am in the soccer club FC Alberschwende.</li>
+        <li>I am in the football club Alberschwende.</li>
         <li>In winter I like to go skiing.</li>
         <li>In summer I often go cicling.</li>
     </ol>
@@ -29,8 +29,8 @@
 
     <h2>My life:<h2>
     <p> 16 years ago I was born in the hospital in Dornbirn. With 6 years i visited the primary school in Alberschwende.<br>
-        At this time I also started to play soccer at the soccer club FC Alberschwende. After four years in primary<br>
-        I went to school I went to secondary school also in Alberschwende. And at the moment I am visiting the Borg in Egg.
+        At this time I also started to play soccer at the football club Alberschwende. After four years in primary<br>
+        school I went to secondary school also in Alberschwende. And at the moment I am visiting the Borg in Egg.
       </p>
 
     </body>
