--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
 
         <title>About me</title>
+        <style>
+        body{background-color: rgb(green);}
+
+        </style>
     </head>
     <body>
 
